2018-02-21  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-964
	
	Adding nlte_field to iy_main_agenda.  Necessary for NLTE computations
	iterating the field.
	
	Also, DISORT test failed before this commit with exactly the same error
	as before.  This is therefore unrelated.
	
	* src/m_atmospheres.cc:  Created nlte_fieldSetLTE to get the ratios
	for nlte_field to LTE ratios.  This still needs some more checking.
	
	* src/the-rest:  Changes so that iy-calls knows of nlte_field.
	Only exception is the jacobians for doit, which assume there is
	LTE.

2018-02-21  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-963

	* CMakeLists.txt, controlfiles/CMakeLists.txt, doc/CMakeLists.txt,
	controlfiles/classroom_exercises/, doc/classroom_excercises_solutions/:

	Remove classroom exercises. They are available in a separate package:
	https://arts.mi.uni-hamburg.de/svn/rt/arts-lectures/trunk/

2018-02-21  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-962

	* tools/bash_completion/completion_arts.sh:

	Fix expansion of ~ or $HOME in arts exe path.

	Add new commandline options datapath, docserver, docdaemon.

	* tools/bash_completion/README:

	Match text with example.

2018-02-20 Jana Mendrok  <jana.mendrok@gmail.com>

	* arts-2-3-961

	* src/rte.cc (get_ppath_partopt):
	Replaced a leftover instance of opt_propCalc by new optprop extraction
	scheme.

	* src/optproperties.cc (opt_prop_1ScatElem, abs_vec_SSD2Stokes):
	Oops, fixed some crucial bugs revealed by the above (and the
	TransWithScat test). Why did they go unnoticed so far? :-O

	* src/workspace.cc, src/methods.cc, src/rte.[cc,h] (get_ppath_partopt),
	src/m_transmitter.cc (iyTransmissionStandard),
	src/m_cloudradar.cc (iyActiveSingleScat),
	src/m_rte.cc (iyEmissionStandard),
	controlfiles/general/general.arts:
	Removed use_mean_scat_data (and interface dummies).

	* controlfiles/artscomponents/wfuns/TestDoitJacobians.arts,
	controlfiles/artscomponents/wfuns/TestWfunsHybCloudy.arts: